2014-05-12  Per Bothner  <per@bothner.com>

	* ReadTable.java (initialize): Revert previous change.  Instead
	handle '@' as splice operator in Scheme's createReadTable.

2014-05-05  Per Bothner  <per@bothner.com>

	* ReadTable.java (initialize): Read @FOO as ($splice$ FOO).
	* LispLanguage.java (splice_str, splice_sym): New static fields.
	* ReaderQuote.java (kind): New field.
	(getKind): Return kind.
	* LispReader.java (handlePostfix): Warn for deprecated TYPE:@ syntax.
	(validPostfixLookupStart): Check for '@'.

2014-04-27  Per Bothner  <per@bothner.com>

	* LispLanguage.java (keywordsAreSelfEvaluating): New method.

2014-03-17  Per Bothner  <per@bothner.com>

	* ReaderExtendedLiteral.java (scanTag): Alloc ">>". 

2014-03-08  Per Bothner  <per@bothner.com>

	* ReaderExtendedLiteral.java (scanTag): Allow ">".

2014-02-23  Per Bothner  <per@bothner.com>

	* LispReader.java (checkEncodingSpec): New method.
	(readNestedComment): Check for "coding" spec.
	* ReaderIgnoreRestOfLine.java (read): Likewise.

2014-02-16  Per Bothner  <per@bothner.com>

	* ReaderDispatchMacro.java: Make sure Error is uncaught or re-thrown.
	* ReaderDispatchSyntaxQuote.java: Likewise.

2014-02-12  Per Bothner  <per@bothner.com>

	* LangPrimType.java: Change charType to recognize both gnu.text.Char
	and java.lang.Character.

	* ClassNamespace.java: Use WrappedException.rethrow.

2014-02-05  Charles Turner  <chturne@gmail.com>

	* LispPackage.java: Manage Lisp packages explicity in the
	namespace map.

2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.

2013-12-22  Per Bothner  <per@bothner.com>

	* LangObjType.java: Add some handling for coercing an LProcess
	or a Blog to a vtevector.
	* ReaderExtendedLiteral.java (scanTag): New method to handle
	tag name.  Extend from just allowing NCName to also allowing
	'&`' and '&<'.

2013-12-21  Per Bothner  <per@bothner.com>

	* ReaderExtendedLiteral.java (readContent): Warn about ']]>'.
