@@ -1,3 +1,8 @@
+2014-06-26  Per Bothner  <per@bothner.com>
+
+	* LispReader.java (readCharacter): Better error if character
+	value out of range.
+
 2014-05-12  Per Bothner  <per@bothner.com>
 
 	* ReadTable.java (initialize): Revert previous change.  Instead
